<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toBuffer">Buffer automatico</string>
    <string name="idVolReq">Volumen en L de buffer TRIS</string>
    <string name="valVolReq">1</string>
    <string name="idConcTris">Concentracion de TRIS en M</string>
    <string name="valConcTris">0.05</string>
    <string name="idConcNaCl">Concentracion de NaCl2 en M</string>
    <string name="valConcNacl">0.3</string>
    <string name="idConcMgCl">Concentracion de MgCl2 en M</string>
    <string name="valConcMgCl">0.005</string>
    <string name="idVolGlic">Volumen de glicerol en mL</string>
    <string name="valVolGlic">50</string>
    <string name="idConcImidzl">Concentracion de Imidzl en M</string>
    <string name="valConcImidzl">0.5</string>
    <string name="btnCalcular">CALCULAR</string>
    <string name="resPesoTRIS">Gramos a pesar de TRIS</string>
    <string name="resPesoNaCl">Gramos a pesar de NaCl2</string>
    <string name="resPesoMgCl">Gramos a pesar de MgCl2</string>
    <string name="resPesoGlic">Gramos a pesar de Glicerol</string>
    <string name="resPesoImdzl">Gramos a pesar de Imidazol</string>
    <string name="rptaTRIS">Respuesta</string>
    <string name="rptaNaCl">Respuesta</string>
    <string name="rptaMgCl">Respuesta</string>
    <string name="rptaGlic">Respuesta</string>
    <string name="rptaImdzl">Respuesta</string>
    <string name="btntoBufferTRIS">Buffer TRIS</string>
    <string name="btntoBufferHEPES">Buffer HEPES</string>

    <string name="idVolReq2">Volumen en L de buffer HEPES</string>
    <string name="idConcHEPES">Concentracion de HEPES en M</string>
    <string name="idConcNaCl2">Concentracion de NaCl2 en M</string>
    <string name="idConcMgCl2">Concentracion de MgCl2 en M</string>
    <string name="idVolGlic2">Volumen de glicerol en mL</string>
    <string name="idConcImidzl2">Concentracion de Imidzl en M</string>
    <string name="valVolReq2">1</string>
    <string name="valConcHEPES2">0.025</string>
    <string name="valConcNaCl2">0.3</string>
    <string name="valConcMgCl2">0.005</string>
    <string name="valVolGlic2">100</string>
    <string name="valConcImidzl2">0.5</string>
    <string name="btnCalcular2">CALCULAR</string>
    <string name="resPesoHEPES2">Gramos a pesar de HEPES</string>
    <string name="resPesoNaCl2">Gramos a pesar de NaCl2</string>
    <string name="resPesoMgCl2">Gramos a pesar de MgCl2</string>
    <string name="resPesoGlic2">Gramos a pesar de Glicerol</string>
    <string name="resPesoImdzl2">Gramos a pesar de Imidazol</string>
    <string name="rptaHEPES2">Respuesta</string>
    <string name="rptaNaCl2">Respuesta</string>
    <string name="rptaMgCl2">Respuesta</string>
    <string name="rptaGlic2">Respuesta</string>
    <string name="rptaImdzl2">Respuesta</string>

    <string name="toGelsds">Gel SDS PAGE</string>
    <string name="idagua">Agua: 7,58 mL</string>
    <string name="idagua2">Agua: 195 uL</string>
    <string name="idacrilamida">Acrilamida: 7.82 mL</string>
    <string name="idtris882M">Tris pH 8.8 2M: 3.67 mL</string>
    <string name="idsds">SDS 10%: 195 uL</string>
    <string name="idtemed">TEMED: 22.25 mL</string>
    <string name="idpersa">PERSA 10%: 120 uL</string>
    <string name="idtituloresolucion">Gel de resolución (4 geles)</string>
    <string name="checkagua">Hecho</string>
    <string name="checkagua2">Hecho</string>
    <string name="checkacrilamida">Hecho</string>
    <string name="checktris">Hecho</string>
    <string name="checksds">Hecho</string>
    <string name="checktemed">Hecho</string>
    <string name="checkpersa">Hecho</string>
    <string name="tosdsstacking">Hacia gel de stacking</string>

    <string name="toGelsds2">Gel SDS PAGE</string>
    <string name="idaguas2">Agua: 4,09 mL</string>
    <string name="idagua22">Agua: 53.5 uL</string>
    <string name="idacrilamida2">Acrilamida: 800 uL</string>
    <string name="idtris882M2">Tris pH 6.8 2M: 335 uL</string>
    <string name="idsds2">SDS 10%: 53.5 uL</string>
    <string name="idtemed2">TEMED: 8.9 uL</string>
    <string name="idpersa2">PERSA 10%: 44.5 uL</string>
    <string name="idtituloresolucion2">Gel de stacking (4 geles)</string>
    <string name="checkagua22">Hecho</string>
    <string name="checkaguas2">Hecho</string>
    <string name="checkacrilamida2">Hecho</string>
    <string name="checktris2">Hecho</string>
    <string name="checksds2">Hecho</string>
    <string name="checktemed2">Hecho</string>
    <string name="checkpersa2">Hecho</string>
    <string name="inducidonoinducido">Inducido - No Inducido</string>

    <string name="idvolnoinducido">Volumen No Inducido</string>
    <string name="idDOnoinducido">DO No Inducido</string>
    <string name="idvolinducido">Volumen Inducido</string>
    <string name="idDOinducido">DO Inducido</string>

    <string name="btncalcvolnoind">Vol no inducido</string>
    <string name="btncalcvolind">Vol inducido</string>
    <string name="btncalcDOnoind">DO no inducido</string>
    <string name="btncalcDOind">DO inducido</string>
    <string name="resvolnoin">Resultado volumen no inducido</string>
    <string name="resDOnoind">Resultado DO no inducido</string>
    <string name="valVolNoInd">200</string>
    <string name="valDONoInd">0.6</string>
    <string name="valVolInd">100</string>
    <string name="valDOInd">1</string>
    <string name="resvolind">Resultado volumen inducido</string>
    <string name="resDOind">Resultado DO inducido</string>
    <string name="resfactorDOvol">Factor</string>
    <string name="rptavolnoind">Respuesta</string>
    <string name="rptaDOnoind">Respuesta</string>
    <string name="rptavolind">Respuesta</string>
    <string name="rptaDOind">Respuesta</string>
    <string name="rptafactorDOvol">Respuesta</string>

    <string name="toMolManual">Molaridad Manual</string>
    <string name="toDiluc">Diluciones</string>


    <string name="idPesMol">Introduce el Peso Molecular</string>
    <string name="idVolLit">Volumen en Litros deseado</string>
    <string name="idMolFinal">Molaridad final deseada en M</string>
    <string name="valPesMol">58.44</string>
    <string name="valVolLit">0.1</string>
    <string name="valMolFinal">0.3</string>
    <string name="btncalcgrampes">Calcular</string>
    <string name="resgramosPesar">Gramos a pesar</string>
    <string name="rptagramosPesar">Respuesta</string>

    <string name="idConc1">Introduce la concentración 1</string>
    <string name="idVol1">Introduce el volumen 1</string>
    <string name="idConc2">Introduce la concentración 2</string>
    <string name="idVol2">Introduce el volumen 2</string>
    <string name="valConc1">2</string>
    <string name="valVol1">100</string>
    <string name="valConc2">0.005</string>
    <string name="valVol2">300</string>
    <string name="btnconc1">Concentracion 1</string>
    <string name="btnvol1">Volumen 1</string>
    <string name="btnconc2">Concentracion 2</string>
    <string name="btnvol2">Volumen 2</string>
    <string name="idrptadiluc">Respuesta:</string>
    <string name="rptadilucc">Respuesta</string>

</resources>